<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Login Page -->

    <string name="sign_in_text">Sign In</string>
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Password</string>
    <string name="login_text">Login</string>
    <string name="need_account">Need an account? Join today!</string>
    <string name="signup_text">Sign Up!</string>
    <string name="login_screen_title">Login</string>

    <!-- Welcome Page -->

    <string name="welcome_text">Welcome!</string>
    <string name="welcome_description">Shop Designer Shoes &#38; Fashion Accessories from a wide range of selections.\n\nLuxury brands at great prices.
        \n\nFREE Click &#38; Collect. \n\nAvailable with FREE Returns!</string>
    <string name="sounds_good">Sounds good...</string>
    <string name="lets_go">Let\'s Go!</string>

    <!-- Instruction Page -->

    <string name="your_next_steps">Your Next Steps</string>
    <string name="instruction_description">Firstly, navigate to the shoe list that you are interested in.\n\nNext,
        select your preferred shoes from the list to add them to your order.\n\nEnsure you haven\'t missed any
        fantastic shoes by scrolling down the list!</string>
    <string name="take_me_there">Take Me There!</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_menu_title">Logout</string>
    <string name="submit_new_shoe_desc">Submit New Shoe</string>
    <string name="keep_going_text">Keep going...</string>
    <string name="shoeNameTxt">Shoe Name</string>
    <string name="shoeCompanyTxt">Shoe Company</string>
    <string name="shoeSizeTxt">Shoe Size</string>
    <string name="shoeDescTxt">Shoe Description</string>
    <string name="enter_shoe_details">Enter Shoe Details</string>
    <string name="shoe_name_detail">Shoe Name</string>
    <string name="shoe_company_detail">Shoe Company</string>
    <string name="shoe_size_detail">Shoe Size</string>
    <string name="shoe_description_detail">Shoe Description</string>
</resources>
