<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/shoeSize"
        app:layout_constraintStart_toEndOf="@+id/shoeSize"
        android:padding="16dp">



        <TextView
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeSizeTxt"
            app:layout_constraintEnd_toStartOf="@+id/shoeCompany"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoeName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeNameTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeCompanyTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/shoeDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoeDescTxt"
            app:layout_constraintEnd_toEndOf="@+id/shoeCompany"
            app:layout_constraintStart_toStartOf="@+id/shoeName"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>