<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/FragmentTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/shoeDetailHeading"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_shoe_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeNameLabel"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/shoe_name_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeDetailHeading" />

        <EditText
            android:id="@+id/shoeNameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/details_background"
            android:ems="8"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameLabel" />

        <TextView
            android:id="@+id/shoeCompanyLabel"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/shoe_company_detail"
            app:layout_constraintStart_toStartOf="@+id/shoeNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameField" />

        <EditText
            android:id="@+id/shoeCompanyField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/details_background"
            android:ems="8"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyLabel" />

        <TextView
            android:id="@+id/shoeSizeLabel"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/shoe_size_detail"
            app:layout_constraintStart_toStartOf="@+id/shoeCompanyLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyField" />

        <EditText
            android:id="@+id/shoeSizeField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/details_background"
            android:ems="8"
            android:fontFamily="@font/poppins"
            android:inputType="number"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeLabel" />

        <TextView
            android:id="@+id/shoeDescLabel"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/shoe_description_detail"
            app:layout_constraintStart_toStartOf="@+id/shoeSizeLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeField" />

        <EditText
            android:id="@+id/shoeDescField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/details_background"
            android:ems="8"
            android:fontFamily="@font/poppins"
            android:inputType="textLongMessage|text"
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescLabel" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/return_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/abc_vector_test" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>